[tool.poetry]
name = "mongodb-select"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
packages = [{include = "mongodb_select"}]

[tool.poetry.dependencies]
python = "^3.11"
pytz = "^2023.3"
pandas = "^2.0.3"
pymongo = "^4.4.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
